# ImageLab

./: .gitignore  .launch_box.sh  .run_e2e.sh  .setup_box.sh  FUTURE_WORK.md  IDEAS.md  Papers.md  README.md  RESULTS.md  pyproject.toml
.pi/: taskplane.json
configs/: car_e2e_pokemon.yaml  car_e2e_pokemon_64.yaml  car_e2e_pokemon_64_bar.yaml  car_e2e_pokemon_64_fast.yaml  car_e2e_pokemon_dinov3.yaml  car_pokemon_qwen.yaml  cvq_pokemon.yaml  cvq_pokemon_cnn.yaml  cvq_pokemon_cnn_eostok.yaml  cvq_pokemon_cnn_fvq.yaml  cvq_pokemon_cnn_ibq.yaml  cvq_pokemon_cnn_ibq_pion.yaml  cvq_pokemon_cnn_ibqtransvq_4k.yaml  cvq_pokemon_cnn_transvq.yaml  cvq_pokemon_cuda.yaml
configs/archive/: README.md  cvq_pokemon_cnn_cb4096.yaml  cvq_pokemon_cnn_entropy.yaml  cvq_pokemon_cnn_ibqtransvq.yaml  cvq_pokemon_cnn_ibqtransvq_learnable.yaml  cvq_pokemon_cnn_simvq.yaml  cvq_pokemon_cnn_wasserstein.yaml
cvq/: checkpoint.py  conditioning.py  generate.py  metrics.py  muon.py  nested_dropout.py  reconstruct.py  tokenizer_factory.py  train.py  train_car.py  train_e2e.py  training_loop.py  utils.py
cvq/data/: car_dataset.py  dataset.py  download_pokemon.py
cvq/losses/: losses.py
cvq/models/: car.py  decoder.py  dino_align.py  discriminator.py  encoder_cnn.py  fsq.py  mbm_head.py  quantizer.py  siglip_encoder.py  tokenizer.py  vq_variants.py
scripts/: run_server.sh  setup_server.sh
