[project]
name = "cvq-pokemon"
version = "0.1.0"
description = "Faithful, MacBook-scaled reimplementation of Channel-wise Vector Quantization (CVQ, arXiv:2605.26089) on a Pokemon dataset"
requires-python = ">=3.11"
dependencies = [
    # Core DL — torch>=2.4.1 per the CVQ README; MPS (Apple Metal) backend ships in the standard wheels.
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    # transformers pinned to the exact version the paper used (SigLIP encoder lives here).
    "transformers==4.50.3",
    # Perceptual loss used by VQGAN/CVQ reconstruction objective.
    "lpips>=0.1.4",
    # Data + utilities
    "pillow>=10.0.0",
    "numpy>=1.26,<2.3",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "einops>=0.8.0",
    # Logging / metrics
    "tensorboard>=2.16.0",
]

[tool.uv]
# Keep the resolver from pulling CUDA-only builds; the default PyPI wheels are MPS-capable on arm64 macOS.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvq"]
